fix message hidden by message input footer

--- a/static/style.css
+++ b/static/style.css
@@ -102,7 +102,7 @@ h1, h2, h3 {
 }
 
 #message-block{
-    
+    margin-bottom: 110px;
 }
 
 #message-header{
